--- a/service.html
+++ b/service.html
@@ -44,10 +44,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Productos</a>
-                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
+                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
@@ -57,14 +57,14 @@
     <!-- Navbar End -->
 
 
-    <!-- Page Header Start -->
+  <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Productos</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Catalogo</h1>
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Productos</p>
+                <p class="m-0 text-white">Catalogo</p>
             </div>
         </div>
     </div>
@@ -85,76 +85,63 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/carameloE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Caramelo Energizante</h4>
+                            <h4>
+                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Caramelo Energizante
+                                </a>
+                            </h4>
+
                             <p class="m-0"> Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
                         </div>
-                        <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Producto AA</h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                             <h4>
+                                <a href="bar.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Energix - Bar
+                                </a>
+                            </h4>
+                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. Sit lorem ipsum et diam elitr est dolor sed duo. uberg sea et et lorem dolor sed est sit
                             invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Producto BB</h4>
+                            <h4>
+                                <a href="drink.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Energix- Drink
+                                </a>
+                            </h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. </p>
                         </div>
                     </div>
-                                            <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
+
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Producto CC</h4>
+                            <h4>
+                                <a href="accessories.html" style="text-decoration: none; color: inherit;">
+                                    <i class="fa fa-truck service-icon"></i>Accessories
+                            </h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
                                 invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -170,16 +157,16 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">PONERSE EN CONTACTO</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Parque Industrial -Arequipa</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+54 258760</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@asociacion.com</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@gmail.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fa-brands fa-tiktok"></i></a>
+      
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -199,6 +186,7 @@
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
                         <div class="input-group-append">
                             <button class="btn btn-primary font-weight-bold px-3">Sign Up</button>
+
                         </div>
                     </div>
                 </div>
