--- a/service.html
+++ b/service.html
@@ -21,50 +21,42 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-    <link href="css/style.min.css" rel="stylesheet">
+
     <!-- Customized Bootstrap Stylesheet -->
-        <style>
-        .btn-negro {
-        background-color: #552213;
-        border: 3px; 
-        color: white;
-        }
-        </style>
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-     <!-- Navbar Start -->
+    <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
-        <nav class="navbar navbar-expand-lg bg-white navbar-dark py-3">
-                <a href="#">
-                    <img src="img/logoFondo.png" alt="LiKaleas" style="width:20%;">
-                </a>
-            <button type="button" class="navbar-toggler btn-negro" data-toggle="collapse" data-target="#navbarCollapse">
+        <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
+            <a href="index.html" class="navbar-brand px-lg-4 m-0">
+                <h1 class="m-0 display-4 text-uppercase text-white">Likalees</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
-                <div class="navbar-nav ml-auto p-4" >
-                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
-                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-                    <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav ml-auto p-4">
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
+                    <a href="service.html" class="nav-item nav-link">Productos</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contactanos</a>
                 </div>
             </div>
         </nav>
     </div>
-
     <!-- Navbar End -->
 
 
-  <!-- Page Header Start -->
+    <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Catalogo</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Productos</h1>
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Catalogo</p>
+                <p class="m-0 text-white">Productos</p>
             </div>
         </div>
     </div>
@@ -75,8 +67,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros Productos</h4>
-                <h1 class="display-4">Variados</h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
+                <h1 class="display-4">Fresh & Organic Beans</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
@@ -85,15 +77,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/carameloE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4>
-                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Caramelo Energizante
-                                </a>
-                            </h4>
-
-                            <p class="m-0"> Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
+                            <h4><i class="fa fa-truck service-icon"></i>Energix - Candy</h4>
+                            <p class="m-0">Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
                         </div>
-
                     </div>
                 </div>
                 <div class="col-lg-6 mb-5">
@@ -102,13 +88,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/barraE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                             <h4>
-                                <a href="bar.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Energix - Bar
-                                </a>
-                            </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. Sit lorem ipsum et diam elitr est dolor sed duo. uberg sea et et lorem dolor sed est sit
-                            invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar </h4>
+                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
                     </div>
                 </div>
@@ -118,15 +100,11 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4>
-                                <a href="drink.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Energix- Drink
-                                </a>
-                            </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor. </p>
+                            <h4><i class="fa fa-award service-icon"></i>Energix - Drink</h4>
+                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
                     </div>
-
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
@@ -134,14 +112,10 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4>
-                                <a href="accessories.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Accessories
-                            </h4>
+                            <h4><i class="fa fa-table service-icon"></i>Accessories</h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
                                 invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -150,43 +124,42 @@
     <!-- Service End -->
 
 
-   <!-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">PONERSE EN CONTACTO</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Parque Industrial -Arequipa</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+54 258760</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@gmail.com</p>
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Get In Touch</h4>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>info@example.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
-                <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Follow Us</h4>
+                <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
                 <div class="d-flex justify-content-start">
-
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fa-brands fa-tiktok"></i></a>
-      
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">HORARIOS DE APERTURA</h4>
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Open Hours</h4>
                 <div>
-                    <h6 class="text-white text-uppercase">Lunes - Viernes</h6>
+                    <h6 class="text-white text-uppercase">Monday - Friday</h6>
                     <p>8.00 AM - 8.00 PM</p>
-                    <h6 class="text-white text-uppercase">Sabado - Domingo</h6>
+                    <h6 class="text-white text-uppercase">Saturday - Sunday</h6>
                     <p>2.00 PM - 8.00 PM</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">BOLETIN INFORMATIVO</h4>
-                <p>En "LiKaleas", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Newsletter</h4>
+                <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
                         <div class="input-group-append">
                             <button class="btn btn-primary font-weight-bold px-3">Sign Up</button>
-
                         </div>
                     </div>
                 </div>
@@ -194,11 +167,10 @@
         </div>
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
             <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. All Rights Reserved.</a></p>
-            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex - Hotaru@</a></p>
+            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
     <!-- Footer End -->
-
 
 
     <!-- Back to Top -->
