--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
     <style type="text/css">
+        #blog-carousel {
+        max-height: 300px; /* Ajusta la altura máxima según tus necesidades */
+        }
         .btn-negro {
         background-color: #552213;
         border: 3px; 
@@ -45,9 +48,12 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <!--<a href="indexPrueba.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>-->
-                    <a href="login.html" class="nav-item nav-link " style="color:#964B00">Login</a>
-
+                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
+                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
+                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+                    <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
         </nav>
@@ -62,13 +68,31 @@
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida </h2>
+                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida</h2>
                         <h1 class="display-1 text-white m-0">ENERGIX</h1>
                         <h2 class="text-white m-0">Desde 2023</h2>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <!-- Contenido de la segunda imagen del carrusel -->
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
+                    <!-- Contenido de la tercera imagen del carrusel -->
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#blog-carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#blog-carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
         </div>
     </div>
+
 
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
@@ -77,16 +101,16 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">PONERSE EN CONTACTO</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Parque Industrial -Arequipa</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+54 258760</p>
-                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@gmail.com</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>likalees@asociacion.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fa-brands fa-tiktok"></i></a>
-
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
