--- a/service.html
+++ b/service.html
@@ -24,35 +24,44 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+        <style>
+        .btn-negro {
+        background-color: #552213;
+        border: 3px; 
+        color: white;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
-        <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-            <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">Likalees</h1>
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <nav class="navbar navbar-expand-lg bg-white navbar-dark py-3">
+                <a href="#">
+                    <img src="img/logoFondo.png" alt="LiKaleas" style="width:20%;">
+                </a>
+            <button type="button" class="navbar-toggler btn-negro" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                <div class="navbar-nav ml-auto p-4">
-                    <a href="index.html" class="nav-item nav-link">Inicio</a>
-                    <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <a href="contact.html" class="nav-item nav-link active">Contactanos</a>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
+                <div class="navbar-nav ml-auto p-4" >
+                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
+                    <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
+                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+                    <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
         </nav>
     </div>
-    <!-- Navbar End -->
+
 
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Productos</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Catalogo</h1>
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
@@ -68,7 +77,7 @@
         <div class="container">
             <div class="section-title">
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Catalogo</h4>
-                <h1 class="display-4">Productos Variados</h1>
+                <h1 class="display-4">Variados</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
@@ -77,7 +86,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/carameloE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Energix - Candy</h4>
+                            <h4><i class="fa fa-truck service-icon"></i>Caramelo Energizante</h4>
                             <p class="m-0">Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
                         </div>
                     </div>
@@ -85,7 +94,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar </h4>
@@ -97,10 +106,10 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Energix - Drink</h4>
+                            <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
                                 invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
@@ -109,10 +118,10 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Accessories</h4>
+                            <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
                             <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
                                 invidunt, dolore tempor diam ipsum takima erat tempor</p>
                         </div>
